--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Webpack Template All Set Up!</h1>
+    <!-- <h1>Webpack Template All Set Up!</h1> -->
+     <div class="container">
+      
+     </div>
   </body>
 </html>
