--- a/src/template.html
+++ b/src/template.html
@@ -3,12 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <title>Weather App</title>
   </head>
   <body>
     <!-- <h1>Webpack Template All Set Up!</h1> -->
-     <div class="container">
-      
-     </div>
+     <header id="main-header">
+      <div class="city">Pune</div>
+      <ul class="menu">
+        <li>Option 1</li>
+        <li> Option 2</li>
+      </ul>
+     </header>
+     
+     <main id="weather-board">
+
+     </main>
+
+     <section id="weather-forecast">
+
+     </section>
+
+     <section id="misc">
+
+     </section>
   </body>
 </html>
