Add fontawesome icon kit

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/caec046269.js" crossorigin="anonymous"></script>
     <title>Weather App</title>
   </head>
   <body>
@@ -13,8 +14,7 @@
      <header id="main-header">
       <div class="city">Pune</div>
       <ul class="menu">
-        <li>Option 1</li>
-        <li> Option 2</li>
+        <li><i class="fa-solid fa-globe" style="color: #ffffff;"></i></li>
       </ul>
      </header>
      
