Add weather board styling

--- a/src/template.html
+++ b/src/template.html
@@ -19,7 +19,10 @@
      </header>
      
      <main id="weather-board">
-
+        <div class="temp-info">
+          <span class="temp">23&deg;</span>
+          <span class="info">Mostly clouds </span>
+        </div>
      </main>
 
      <section id="weather-forecast">
