Add basic stylings

--- a/src/template.html
+++ b/src/template.html
@@ -21,7 +21,7 @@
      <main id="weather-board">
         <div class="temp-info">
           <span class="temp">23&deg;</span>
-          <span class="info">Mostly clouds </span>
+          <span class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi ratione officia animi tempore!</span>
         </div>
      </main>
 
