Add basic dom manipulation

--- a/src/template.html
+++ b/src/template.html
@@ -20,8 +20,11 @@
      
      <main id="weather-board">
         <div class="temp-info">
-          <span class="temp">23&deg;</span>
-          <span class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi ratione officia animi tempore!</span>
+          <div>
+          <span class="temp">[Temperature (Upto 2 decimals)]</span>
+          <span class="temp">&deg;</span>
+          </div>
+          <span class="info">[Conditions Text]</span>
         </div>
      </main>
 
