Update parse current day data

--- a/src/template.html
+++ b/src/template.html
@@ -22,7 +22,7 @@
         <div class="temp-info">
           <div>
           <span class="temp">[Temperature (Upto 2 decimals)]</span>
-          <span class="temp">&deg;</span>
+          <span class="temp"></span>
           </div>
           <span class="info">[Conditions Text]</span>
         </div>
