Add weather-forecast style

--- a/src/template.html
+++ b/src/template.html
@@ -3,37 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/caec046269.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/caec046269.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Weather App</title>
   </head>
   <body>
     <!-- <h1>Webpack Template All Set Up!</h1> -->
-     <header id="main-header">
+    <header id="main-header">
       <div class="city">Pune</div>
       <ul class="menu">
-        <li><i class="fa-solid fa-globe" style="color: #ffffff;"></i></li>
+        <li><i class="fa-solid fa-globe" style="color: #ffffff"></i></li>
       </ul>
-     </header>
-     
-     <main id="weather-board">
-        <div class="temp-info">
-          <div>
+    </header>
+
+    <main id="weather-board">
+      <div class="temp-info">
+        <div>
           <span class="temp">[Temperature (Upto 2 decimals)]</span>
           <span class="temp"></span>
-          </div>
-          <span class="info">[Conditions Text]</span>
         </div>
-     </main>
+        <span class="info">[Conditions Text]</span>
+      </div>
+    </main>
 
-     <section id="weather-forecast">
-
-     </section>
-
-     <section id="misc">
-
-     </section>
+    <section id="weather-forecast"></section>
+    <div class="day-pallete">
+      <span class="time-stamp">
+        <span>Now</span>
+        <span>Image</span>
+        <span>22C</span>
+      </span>
+    </div>
+    <section id="misc"></section>
   </body>
 </html>
