--- a/src/template.html
+++ b/src/template.html
@@ -36,11 +36,13 @@
 
     <section id="weather-forecast"></section>
     <div class="day-pallete">
-      <span class="time-stamp">
-        <span>Now</span>
-        <span>Image</span>
-        <span>22C</span>
-      </span>
+      <template class="time-stamp-temp">
+        <div class="time-stamp">
+        <span id="hr">Now</span>
+        <span id="icn">Image</span>
+        <span id="tmp">22C</span>
+      </div>
+      </template>
     </div>
     <section id="misc"></section>
   </body>
