--- a/src/template.html
+++ b/src/template.html
@@ -24,13 +24,16 @@
       </ul>
     </header>
 
+    <div class="container">
     <main id="weather-board">
       <div class="temp-info">
         <div>
           <span class="temp">[Temperature (Upto 2 decimals)]</span>
           <span class="temp"></span>
         </div>
+
         <span class="info">[Conditions Text]</span>
+      
       </div>
     </main>
 
@@ -45,5 +48,6 @@
       </template>
     </div>
     <section id="misc"></section>
+    </div>
   </body>
 </html>
