Add forecast pallete
  Placeholder content - check

--- a/src/template.html
+++ b/src/template.html
@@ -37,16 +37,27 @@
       </div>
     </main>
 
-    <section id="weather-forecast"></section>
-    <div class="day-pallete">
-      <template class="time-stamp-temp">
-        <div class="time-stamp">
-        <span id="hr">Now</span>
-        <span id="icn">Image</span>
-        <span id="tmp">22C</span>
+    <section id="weather-forecast">
+      <div class="day-pallete">
+        <template class="time-stamp-temp">
+          <div class="time-stamp">
+          <span id="hr">Now</span>
+          <span id="icn">Image</span>
+          <span id="tmp">22C</span>
+        </div>
+        </template>
       </div>
-      </template>
-    </div>
+
+      <div class="forecast-pallete">
+        <div class="day-stamp">
+          <span id="forecast-date">29 Sept</span>
+          <span id="forecast-day">Today</span>
+          <span id="forecasr-icn">img</span>
+          <span id="forecast-temp">21/30</span>
+        </div>
+      </div>
+    </section>
+   
     <section id="misc"></section>
     </div>
   </body>
