Remove unwanted padding

--- a/src/template.html
+++ b/src/template.html
@@ -38,7 +38,7 @@
     </main>
 
     <section id="weather-forecast">
-      <div class="day-pallete">
+      <div class="day-pallete pallete">
         <template class="time-stamp-temp">
           <div class="time-stamp">
           <span id="hr">Now</span>
@@ -48,7 +48,7 @@
         </template>
       </div>
 
-      <div class="forecast-pallete">
+      <div class="forecast-pallete pallete">
         <div class="day-stamp">
           <span id="forecast-date">29 Sept</span>
           <span id="forecast-day">Today</span>
