Add logic to display forecast pallete

--- a/src/template.html
+++ b/src/template.html
@@ -49,12 +49,14 @@
       </div>
 
       <div class="forecast-pallete pallete">
+        <template class="day-stamp-temp">
         <div class="day-stamp">
           <span id="forecast-date">29 Sept</span>
           <span id="forecast-day">Today</span>
           <span id="forecasr-icn">img</span>
           <span id="forecast-temp">21/30</span>
         </div>
+      </template>
       </div>
     </section>
    
