--- a/src/template.html
+++ b/src/template.html
@@ -20,6 +20,10 @@
     <header id="main-header">
       <div class="city">Pune</div>
       <ul class="menu">
+        <li>
+          <input type="text" id="search">
+          <label for="search"><button id="search-btn">Search</button></label>
+        </li>
         <li><i class="fa-solid fa-globe" style="color: #ffffff"></i></li>
       </ul>
     </header>
