Add style to search input element

--- a/src/template.html
+++ b/src/template.html
@@ -21,10 +21,17 @@
       <div class="city">Pune</div>
       <ul class="menu">
         <li>
-          <input type="text" id="search">
-          <label for="search"><button id="search-btn">Search</button></label>
+          <input type="text" id="search" placeholder="Enter your city name...">
+         
         </li>
-        <li><i class="fa-solid fa-globe" style="color: #ffffff"></i></li>
+        
+        <li>
+          <button id="search-btn" for="search">Search</button>
+        </li>
+
+        <li>
+          <i class="fa-solid fa-globe" style="color: #ffffff"></i>
+        </li>
       </ul>
     </header>
 
