Add icons to weather pallete

--- a/src/template.html
+++ b/src/template.html
@@ -24,7 +24,7 @@
           <input type="text" id="search" placeholder="Enter your city name...">
          
         </li>
-        
+
         <li>
           <button id="search-btn" for="search">Search</button>
         </li>
@@ -53,7 +53,8 @@
         <template class="time-stamp-temp">
           <div class="time-stamp">
           <span id="hr">Now</span>
-          <span id="icn">Image</span>
+          <img id="icn" alt="[ICON]">
+          <!-- <span id="icn"></span> -->
           <span id="tmp">22C</span>
         </div>
         </template>
