Add icons to forecast

--- a/src/template.html
+++ b/src/template.html
@@ -53,7 +53,7 @@
         <template class="time-stamp-temp">
           <div class="time-stamp">
           <span id="hr">Now</span>
-          <img id="icn" alt="[ICON]">
+          <img id="icn" alt="[ICON]" class="icn">
           <!-- <span id="icn"></span> -->
           <span id="tmp">22C</span>
         </div>
@@ -65,7 +65,7 @@
         <div class="day-stamp">
           <span id="forecast-date">29 Sept</span>
           <span id="forecast-day">Today</span>
-          <span id="forecasr-icn">img</span>
+          <img id="forecast-icn" alt="[ICON]" class="icn">
           <span id="forecast-temp">21/30</span>
         </div>
       </template>
