--- a/src/template.html
+++ b/src/template.html
@@ -21,8 +21,11 @@
       <div class="city">Pune</div>
       <ul class="menu">
         <li>
-          <input type="text" id="search" placeholder="Enter your city name...">
-         
+          <input
+            type="text"
+            id="search"
+            placeholder="Enter your city name..."
+          />
         </li>
 
         <li>
@@ -36,43 +39,75 @@
     </header>
 
     <div class="container">
-    <main id="weather-board">
-      <div class="temp-info">
-        <div>
-          <span class="temp">[Temperature (Upto 2 decimals)]</span>
-          <span class="temp"></span>
+      <main id="weather-board">
+        <div class="temp-info">
+          <div>
+            <span class="temp">[Temperature (Upto 2 decimals)]</span>
+            <span class="temp"></span>
+          </div>
+
+          <span class="info">[Conditions Text]</span>
+        </div>
+        <div class="misc-board">
+
+          <div class="parameter">
+            <span class="para-icon"><i class="fa-solid fa-sun" style="color: #ffffff;"></i></span>
+            <span class="para-name">UV</span>
+            <span class="para-value">0 Very weak</span>
+          </div>
+          <div class="parameter">
+            <span class="para-icon"><i class="fa-solid fa-temperature-high" style="color: #ffffff;"></i></span>
+            <span class="para-name">Feels like</span>
+            <span class="para-value">31&deg;</span>
+          </div>
+          <div class="parameter">
+            <span class="para-icon"><i class="fa-solid fa-droplet" style="color: #ffffff;"></i></span>
+            <span class="para-name">humidity</span>
+            <span class="para-value">76%</span>
+          </div>
+          <div class="parameter">
+            <span class="para-icon"><i class="fa-solid fa-wind" style="color: #ffffff;"></i></span>
+            <span class="para-name">W wind</span>
+            <span class="para-value">1 mph</span>
+          </div>
+          <div class="parameter">
+            <span class="para-icon"><i class="fa-solid fa-arrow-down-wide-short" style="color: #ffffff;"></i></span>
+            <span class="para-name">Air pressure</span>
+            <span class="para-value">1007 hPa</span>
+          </div>
+          <div class="parameter">
+            <span class="para-icon"><i class="fa-solid fa-eye" style="color: #ffffff;"></i></span>
+            <span class="para-name">Visibility</span>
+            <span class="para-value">9 km</span>
+          </div>
+        </div>
+      </main>
+
+      <section id="weather-forecast">
+        <div class="day-pallete pallete">
+          <template class="time-stamp-temp">
+            <div class="time-stamp">
+              <span id="hr">Now</span>
+              <img id="icn" alt="[ICON]" class="icn" />
+              <!-- <span id="icn"></span> -->
+              <span id="tmp">22C</span>
+            </div>
+          </template>
         </div>
 
-        <span class="info">[Conditions Text]</span>
-      
-      </div>
-    </main>
-
-    <section id="weather-forecast">
-      <div class="day-pallete pallete">
-        <template class="time-stamp-temp">
-          <div class="time-stamp">
-          <span id="hr">Now</span>
-          <img id="icn" alt="[ICON]" class="icn">
-          <!-- <span id="icn"></span> -->
-          <span id="tmp">22C</span>
+        <div class="forecast-pallete pallete">
+          <template class="day-stamp-temp">
+            <div class="day-stamp">
+              <span id="forecast-date">29 Sept</span>
+              <span id="forecast-day">Today</span>
+              <img id="forecast-icn" alt="[ICON]" class="icn" />
+              <span id="forecast-temp">21/30</span>
+            </div>
+          </template>
         </div>
-        </template>
-      </div>
+      </section>
 
-      <div class="forecast-pallete pallete">
-        <template class="day-stamp-temp">
-        <div class="day-stamp">
-          <span id="forecast-date">29 Sept</span>
-          <span id="forecast-day">Today</span>
-          <img id="forecast-icn" alt="[ICON]" class="icn">
-          <span id="forecast-temp">21/30</span>
-        </div>
-      </template>
-      </div>
-    </section>
-   
-    <section id="misc"></section>
+      <section id="misc"></section>
     </div>
   </body>
 </html>
