Update misc board
    Display fetched data values on misc board

--- a/src/template.html
+++ b/src/template.html
@@ -53,32 +53,32 @@
           <div class="parameter">
             <span class="para-icon"><i class="fa-solid fa-sun" style="color: #ffffff;"></i></span>
             <span class="para-name">UV</span>
-            <span class="para-value">0 Very weak</span>
+            <span class="para-value" id="uvindex">0 Very weak</span>
           </div>
           <div class="parameter">
             <span class="para-icon"><i class="fa-solid fa-temperature-high" style="color: #ffffff;"></i></span>
             <span class="para-name">Feels like</span>
-            <span class="para-value">31&deg;</span>
+            <span class="para-value" id="feelslike">31&deg;</span>
           </div>
           <div class="parameter">
             <span class="para-icon"><i class="fa-solid fa-droplet" style="color: #ffffff;"></i></span>
             <span class="para-name">humidity</span>
-            <span class="para-value">76%</span>
+            <span class="para-value" id="humidity">76%</span>
           </div>
           <div class="parameter">
             <span class="para-icon"><i class="fa-solid fa-wind" style="color: #ffffff;"></i></span>
             <span class="para-name">W wind</span>
-            <span class="para-value">1 mph</span>
+            <span class="para-value" id="windspeed">1 mph</span>
           </div>
           <div class="parameter">
             <span class="para-icon"><i class="fa-solid fa-arrow-down-wide-short" style="color: #ffffff;"></i></span>
             <span class="para-name">Air pressure</span>
-            <span class="para-value">1007 hPa</span>
+            <span class="para-value" id="pressure">1007 hPa</span>
           </div>
           <div class="parameter">
             <span class="para-icon"><i class="fa-solid fa-eye" style="color: #ffffff;"></i></span>
             <span class="para-name">Visibility</span>
-            <span class="para-value">9 km</span>
+            <span class="para-value" id="visibility">9 km</span>
           </div>
         </div>
       </main>
