--- a/src/template.html
+++ b/src/template.html
@@ -19,17 +19,21 @@
     <!-- <h1>Webpack Template All Set Up!</h1> -->
     <header id="main-header">
       <div class="city">Pune</div>
+      <p class="errorClass" aria-live="polite"></p>
+
       <ul class="menu">
         <li>
-          <input
+          <form action="#" method="post" novalidate>
+            <input
             type="text"
             id="search"
             placeholder="Enter your city name..."
+            minlength=3
+          required
           />
-        </li>
-
-        <li>
-          <button id="search-btn" for="search">Search</button>
+          <input type="submit" id="search-btn" value="Search">
+          </form>
+         
         </li>
 
         <li>
