--- a/src/template.html
+++ b/src/template.html
@@ -45,6 +45,11 @@
     <div class="container">
       <main id="weather-board">
         <div class="temp-info">
+        <div class="loading-mask">
+          <i class="fa-solid fa-globe" style="color: #ffffff"></i>
+          
+        </div>
+
           <div>
             <span class="temp">[Temperature (Upto 2 decimals)]</span>
             <span class="temp"></span>
@@ -53,6 +58,10 @@
           <span class="info">[Conditions Text]</span>
         </div>
         <div class="misc-board">
+        <div class="loading-mask">
+          <i class="fa-solid fa-globe" style="color: #ffffff"></i>
+
+        </div>
 
           <div class="parameter">
             <span class="para-icon"><i class="fa-solid fa-sun" style="color: #ffffff;"></i></span>
@@ -89,6 +98,7 @@
 
       <section id="weather-forecast">
         <div class="day-pallete pallete">
+          
           <template class="time-stamp-temp">
             <div class="time-stamp">
               <span id="hr">Now</span>
